--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <!-- 适应wap -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>云易导航网</title>
+<title>寒汐导航网</title>
 <!-- css3-mediaqueries.js for IE8 or older -->
 <!--[if lt IE 9]>
    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -169,7 +169,7 @@ a:hover {
         }    
         /*以下内容自定义修改*/    
         var l = "欢迎来到",    
-            o = ["云易个人导航~😊", ].map(function (r) {    
+            o = ["寒汐个人导航~😊", ].map(function (r) {    
                 return r + ""    
             }), a = 2, g = 1, s = 5, d = 75,    
             b = ["rgb(110,64,170)", "rgb(150,61,179)", "rgb(191,60,175)", "rgb(228,65,157)", "rgb(254,75,131)", "rgb(255,94,99)", "rgb(255,120,71)", "rgb(251,150,51)", "rgb(226,183,47)", "rgb(198,214,60)", "rgb(175,240,91)", "rgb(127,246,88)", "rgb(82,246,103)", "rgb(48,239,130)", "rgb(29,223,163)", "rgb(26,199,194)", "rgb(35,171,216)", "rgb(54,140,225)", "rgb(76,110,219)", "rgb(96,84,200)"],    
@@ -177,7 +177,7 @@ a:hover {
         i()    
     };    
     chakhsu(document.getElementById('chakhsu'));</script>
-	</div><br /><center><h3>云易网络</h3></center><br /><br /><br />
+	</div><br /><center><h3>寒汐网络</h3></center><br /><br /><br />
 
 
 <!-- 按钮 -->
