--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- by：寒汐 -->
-<!-- 寒汐资源网：www.yunyiz.cn -->
+<!-- 寒汐资源网：www.hxkan.club -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -187,9 +187,9 @@ a:hover {
                 <li class="icon-r1"><a href="http://www.hxkan.club">影视全搜索①</a></li>  
 				<li class="icon-r2"><a href="http://www.hxkan.club/so">影视全搜索②</li>
                 <li class="icon-r3"><a href="http://www.hxkan.club/jx">影视解析网</a></li> 
-                <li class="icon-r4"><a href="http://www.hxkan.club/dh/yy">音乐全搜索</a></li>
-                <li class="icon-l5"><a href="http://www.yunyiz.cn">待添加</a></li>
-                <li class="icon-l6"><a href="http://www.yunyiz.cn">待添加</a></li>
+                <li class="icon-r4"><a href="http://www.hxkan.club/yy">音乐全搜索</a></li>
+                <li class="icon-l5"><a href="https://2140079812.github.io/yigedoubunengsi">小游戏①</a></li>
+                <li class="icon-l6"><a href="https://2140079812.github.io/mf">小游戏②</a></li>
                 <li class="icon-r7"><a href="http://www.yunyiz.cn">待添加</a></li>
 			    <li class="icon-l8"><a href="http://www.yunyiz.cn">待添加</a></li>
 				<li class="icon-r7"><a href="http://www.yunyiz.cn">待添加</a></li>
