--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ a:hover {
                 <li class="icon-r4"><a href="http://www.hxkan.club/yy">音乐全搜索</a></li>
                 <li class="icon-l5"><a href="https://2140079812.github.io/yigedoubunengsi">小游戏①</a></li>
                 <li class="icon-l6"><a href="https://2140079812.github.io/mf">小游戏②</a></li>
-                <li class="icon-r7"><a href="http://www.yunyiz.cn">待添加</a></li>
-			    <li class="icon-l8"><a href="http://www.yunyiz.cn">待添加</a></li>
+                <li class="icon-r7"><a href="https://2140079812.github.io/jsq">手机计算器</a></li>
+			    <li class="icon-l8"><a href="https://2140079812.github.io/gongjuxiang">工具箱</a></li>
 				<li class="icon-r7"><a href="http://www.yunyiz.cn">待添加</a></li>
 			    <li class="icon-r1"><a href="http://www.yunyiz.cn">待添加</a></li>
                 <li class="icon-r2"><a href="http://www.yunyiz.cn">待添加</a></li>
